<resources>
    <string name="app_name">Messenger</string>
    <string name="acc">Account</string>
    <string name="feed">News</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chats</string>
    <string name="analytics">Analytics</string>
    <string name="title_activity_chat_">chat_Activity</string>
    <string name="title_activity_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="conversation">CONVERSATION</string>
    <string name="new_friends">Chat with New Friends</string>
    <string name="search">Search</string>
    <string name="chat_hint">Type a Note</string>
    <string name="messenger">Messenger</string>
    <string name="splash">Messenger</string>
    <string name="splash_secondary">All in One Messaging App</string>
    <string name="make_new_fr">Make new friends</string>
    <string name="click">Click here</string>
    <string name="analysis">Weekely Analysis</string>
    <string name="launches">Total App launches :</string>
    <string name="times">times</string>
    <string name="youtube">Youtube</string>
    <string name="social">Social media</string>
    <string name="banner_id_ad_unit">ca-app-pub-6605349658509803/5336050642</string>
    <string name="explore">Explore</string>
    <string name="news">News</string>
    <string name="no_notification">Nothing to Show!</string>
    <string name="new_msg">New message will Appear here</string>
    <string name="invite">Invite Friends</string>
    <string name="sign_in">Sign in</string>
    <string name="ad_attribution">Ad</string>
    <string name="inside_recycler">ca-app-pub-6605349658509803/3239939144</string>
    <string name="sign_in_with">Sign InMessenger App</string>
    <string name="get_started">Get Started With Phone</string>
    <string name="continue_with_fb">Continue With Facebook</string>

    <string name="FACEBOOK_APP_ID">2543349562395737</string>
    <string name="facebook_app_id">2543349562395737</string>
    <string name="fb_login_protocol_scheme">fb2543349562395737</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">f823e83c36aa6669e4d0f711a7ae4838</string>
    <string name="ak_login_protocol_scheme">ak2543349562395737</string>
    <string name="Enter_number">Enter your mobile number</string>
    <string name="use_sms">Use sms</string>
    <string name="enter_det">Enter Details</string>
    <string name="upload">Upload</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="done">Done</string>
    <string name="permission_message">You need to grant access to usage stats\n GRANT PERMISSION</string>
    <string name="last_time_used_never">Last time used: never</string>
    <string name="last_time_used">Last time used: %1$s</string>
    <string name="analysistext">Analysis</string>
    <string name="dur_stat">Duration Statistics</string>
    <string name="with_you">Messenger has been with you</string>
    <string name="opened">Opened social apps</string>
    <string name="total_dur">Total app use duration</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="change">Change Photo</string>
    <string name="about_me">About me</string>
    <string name="about_you">About you...</string>
    <string name="user_name">User Name</string>
    <string name="num">Phone Number</string>
    <string name="email">Email</string>
    <string name="personal">Personal</string>
    <string name="privacy">Privacy Policy</string>
    <string name="privacy_set">Privacy Settings</string>
    <string name="community">Community</string>
    <string name="rate">Rate on uptoDownStore</string>

</resources>
