<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatapp.messenger.Activity.ProfieEditActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back"
            android:layout_margin="10dp"
            android:background="#fff"
            android:src="@drawable/ic_left_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:layout_alignTop="@id/back"
            android:text="@string/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginBottom="7dp"
            android:id="@+id/save"
            android:background="@drawable/background_button"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="7dp"
            android:layout_alignTop="@id/back"
            android:text="@string/save"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/profile_container"
        android:background="@color/basicWhite"
        app:layout_constraintTop_toBottomOf="@id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/com_facebook_profile_picture_blank_square"
            android:layout_width="80dp"
            android:layout_height="80dp" />

        <TextView
            android:id="@+id/change_photo"
            android:textColor="@color/colorTextSubtitle"
            android:layout_marginTop="90dp"
            android:paddingBottom="10dp"
            android:layout_alignParentTop="true"
            android:text="@string/change"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/user_id"
          android:textSize="18sp"
          android:layout_marginStart="5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

        <TextView
            android:text="@string/about_me"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:layout_marginStart="10dp"
            android:hint="@string/about_you"
            android:background="@color/basicWhite"
            android:id="@+id/about_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/user_name"
            android:layout_marginTop="5dp"
            android:id="@+id/user_name"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="text"
            android:paddingTop="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:layout_marginStart="10dp"
            android:background="@color/basicWhite"
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/num"
            android:layout_marginTop="5dp"
            android:id="@+id/number_text"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/number"
            android:textColor="#000"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/email"
            android:layout_marginTop="5dp"
            android:id="@+id/email_text"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="5dp"
            android:layout_marginStart="10dp"
            android:background="@color/basicWhite"
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />





    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_marginBottom="2dp"
        ads:adUnitId="ca-app-pub-6605349658509803/5336050642"/>

</androidx.constraintlayout.widget.ConstraintLayout>