<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatapp.messenger.Activity.AfterPhonelogin">
    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_left_arrow"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/arrow_back"
        app:layout_constraintTop_toTopOf="@id/arrow_back"
        android:text="@string/enter_det"
        android:textSize="22sp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="50dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_profile_image"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"/>
    <Button
        android:id="@+id/upload_button"
        app:layout_constraintStart_toEndOf="@id/profile_pic"
        app:layout_constraintBottom_toBottomOf="@id/profile_pic"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/upload"
        android:textSize="12sp"
        android:textColor="#fff"
        android:background="@drawable/rounded_primary"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/enter_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        app:layout_constraintTop_toBottomOf="@id/profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/enter_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_phonr_number"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@id/enter_name_text"/>
    <EditText
        android:id="@+id/input_for_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_for_enter_username"
        android:background="@drawable/background_phonr_number"
        android:inputType="text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"/>
    <TextView
        android:id="@+id/text_for_enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/enter_name_input"/>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_primary"
        android:text="@string/done"
        android:textColor="#fff"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>